--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,19 +1,11 @@
 # syntax=docker/dockerfile:1
 FROM python:3.11-alpine
-
 WORKDIR /app
-
-# ใช้ requirements.txt ที่ ROOT (ของ repo)
+ENV FLASK_APP=app/app.py
+ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=5000
 COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r /app/requirements.txt
-
-# คัดลอกซอร์สจริงจากโฟลเดอร์ app/
-COPY app/ /app/
-
-ENV PYTHONUNBUFFERED=1
-ENV TEACHER_CODE=UNSET
+RUN pip install --no-cache-dir -r /app/requirements.txt
 EXPOSE 5000
-
-# ถ้าใน app/app.py มี Flask instance ชื่อ app
-CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app", "--workers", "2", "--threads", "4", "--timeout", "60"]
+COPY . .
+CMD ["flask", "run"]
